kubernetes/config/base/ingress-routes/traefik-dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  annotations:
  namespace: traefik
spec:
  entryPoints:
    - websecure
  tls:
    secretName: traefik-dashboard-cert
  routes:
    - kind: Rule
      match: Host(traefik.com)
      services:
        - name: api@internal
          kind: TraefikService
    - kind: Rule
      match: Host(traefik.com) &&  PathPrefix("/api")
      services:
        - name: api@internal
          kind: TraefikService
